--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,28 @@
     <li>{{ movie.title }} - {{ movie.year }}
         <span class="float-right">
             <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
+            <a class="btn" href="{{ url_for('edit', movie_id=movie.id) }}">Edit</a>
+            <form class="inline-form" method="post" action="{{ url_for('delete', movie_id=movie.id) }}">
+                <input class="btn" type="submit" name="delete" value="Delete" onclick="return confirm('Are you sure?')">
+            </form>
         </span>
     </li>
     {% endfor %}
 </ul>
 <img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}" title="to~to~ro~">
 {% endblock %}
+
+<form method="post">  <!-- 指定提交方法为 POST -->
+    <label for="name">名字</label>
+    <input type="text" name="name" id="name"><br>  <!-- 文本输入框 -->
+    <label for="occupation">职业</label>
+    <input type="text" name="occupation" id="occupation"><br>  <!-- 文本输入框 -->
+    <input type="submit" name="submit" value="登录">  <!-- 提交按钮 -->
+</form>
+
+<p>{{ movies|length }} Titles</p>
+<form method="post">
+    Name <input type="text" name="title" autocomplete="off" required>
+    Year <input type="text" name="year" autocomplete="off" required>
+    <input class="btn" type="submit" name="submit" value="Add">
+</form>
